--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -84,7 +84,7 @@
                 {% endif %}
             {% endif %}
             {% for report in reports %}
-                <li><a href="{{ link }}{{ report }}">{{ report }}</a></li>
+                <li><a href="{{ link }}/{{ report }}">{{ report }}</a></li>
             {% endfor %}
         </ul>
     </section>
