--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -19,7 +19,7 @@
                         в базу</label>
                     <label class="checkbox-label"><input type="checkbox" name="parse_checkbox" value="parse" checked>Спарсить</label>
                     <input type="submit"
-                           name="run_button"
+                           name="parse_button"
                            value="Запустить"
                     >
                 </div>
