--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -57,6 +57,7 @@
                         <input type="submit"
                                name="stop_button"
                                value="Остановить"
+                               hidden
                                 {% if is_terminating %} disabled {% endif %}
                         >
                     </div>
