--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -15,7 +15,7 @@
                     <input type="file"
                            name="file"
                     >
-                    <label class="checkbox-label"><input type="checkbox" name="add_checkbox" value="add" checked>Добавить
+                    <label class="checkbox-label"><input type="checkbox" name="add_checkbox" value="add" checked disabled>Добавить
                         в базу</label>
                     <label class="checkbox-label"><input type="checkbox" name="parse_checkbox" value="parse" checked>Спарсить</label>
                     <input type="submit"
