--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -86,7 +86,7 @@
                     {% endif %}
                 {% endif %}
                 <form method="post">
-                    <input type="submit" name="cancel_button">Отменить</input>
+                    <input type="submit" name="cancel_button" value="Отменить">
                 </form>
             {% endif %}
             {% for report in reports %}
