--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -87,6 +87,7 @@
                 {% endif %}
                 <form method="post">
                     <input type="submit" name="cancel_button" value="Отменить">
+                    (только, если завис)
                 </form>
             {% endif %}
             {% for report in reports %}
